--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "facebookAccount": {
-    "email": "mahmudx077@gmail.com",
+    "email": "",
     "password": "",
     "2FASecret": "",
     "i_user": "",
@@ -17,15 +17,16 @@
     "ignoreCommand": []
   },
   "adminBot": [
-    "100037951718438"
+    "61582917346905",
+    "61555978178537"
   ],
   "whiteListMode": {
-    "enable": false,
-    "whiteListIds": [],
+    "enable": true,
+    "whiteListIds": ["61582917346905", "61555978178537"],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": "Your Hinata Baby",
-  "prefix": "!",
+  "nickNameBot": "ABIR BOT",
+  "prefix": "/",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
