--- a/config.json
+++ b/config.json
@@ -22,7 +22,7 @@
   ],
   "whiteListMode": {
     "enable": true,
-    "whiteListIds": ["61582917346905", "61555978178537"],
+    "whiteListIds": ["61582917346905", "61555978178537" ,"61565271650421"],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
   "nickNameBot": "ABIR BOT",
